--- a/.github/workflows/transform-tokens.yml
+++ b/.github/workflows/transform-tokens.yml
@@ -14,6 +14,8 @@ jobs:
       # this lets us work in the actual repository
       - uses: actions/checkout@master
       # this creates a json file from the stringified json from the request body
+      - name: making directory
+        run: 'mkdir -p _tokens'
       - name: create json from request body
         id: create-json
         uses: jsdaniell/create-json@1.1.2
@@ -23,7 +25,7 @@ jobs:
           # it uses the json string that was send as the tokens parameter
           json: ${{ github.event.client_payload.tokens }}
           # it uses the directory named "tokens" to store this json file (change this if you changed it above to use a different folder)
-          dir: ''
+          dir: '_tokens'
       # we now initialize node to run amazon style dictionary to compile the tokens
       - name: Use Node.js 14.x
         uses: actions/setup-node@v1
