--- a/.github/workflows/transform-tokens.yml
+++ b/.github/workflows/transform-tokens.yml
@@ -18,7 +18,7 @@ jobs:
         run: 'mkdir -p _tokens'
       - name: create json from request body
         id: create-json
-        uses: jsdaniell/create-json@1.2.1
+        uses: jsdaniell/create-json@v1.2.1
         with:
           # it uses the figma filename that was send as then filename parameter
           name: 'tokens'
