--- a/.github/workflows/transform-tokens.yml
+++ b/.github/workflows/transform-tokens.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # this lets us work in the actual repository
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
       - name: create json from request body
         id: create-json
         uses: jsdaniell/create-json@v1.2.1
