--- a/.github/workflows/transform-tokens.yml
+++ b/.github/workflows/transform-tokens.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # this lets us work in the actual repository
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
       - name: create json from request body
         id: create-json
         uses: jsdaniell/create-json@v1.2.1
@@ -21,12 +21,12 @@ jobs:
           name: 'tokens'
           # it uses the json string that was send as the tokens parameter
           json: ${{ github.event.client_payload.tokens }}
+          dir: '_tokens'
       # we now initialize node to run amazon style dictionary to compile the tokens
-      - name: Use Node.js 14.x
+      - name: Use Node.js 16.x
         uses: actions/setup-node@v1
         with:
-          # we use version 14.x of node
-          node-version: 14.x
+          node-version: 16.x
       # We now run npm i to install all dependencies and run the "transfrom" script that is defined in the package.json (change this if you need to)
       - name: Install Dependencies & Prepare to Build
         run: 'npm i && npm run tokens:prepare'
