--- a/.github/workflows/transform-tokens.yml
+++ b/.github/workflows/transform-tokens.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       # this lets us work in the actual repository
       - uses: actions/checkout@v3
+      - name: mkdir "tokens" directory
+        run: 'mkdir -p _tokens'
       - name: create json from request body
         id: create-json
         uses: jsdaniell/create-json@v1.2.1
